--- a/NIBBS/src/main/res/layout/activity_dataform.xml
+++ b/NIBBS/src/main/res/layout/activity_dataform.xml
@@ -231,15 +231,16 @@
                 android:text="Proceed"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toTopOf="@+id/bottomspace"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lgaInputLayout" />
 
             <View
+                android:id="@+id/bottomspace"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="40dip"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/submit" />
 
