--- a/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
+++ b/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
@@ -28,6 +28,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/fingername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/captureImage"
