--- a/NIBBS/src/main/res/layout/activity_fingerprint.xml
+++ b/NIBBS/src/main/res/layout/activity_fingerprint.xml
@@ -108,6 +108,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/leftindex"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -133,6 +134,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/leftmiddle"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -169,6 +171,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/leftring"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -194,6 +197,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/leftlittle"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -241,6 +245,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/rightindex"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -265,6 +270,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/rightmiddle"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -301,6 +307,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/rightring"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -325,6 +332,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/rightlittle"
                             android:layout_width="match_parent"
                             android:layout_height="70dp" />
                         <TextView
@@ -366,6 +374,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <ImageView
+                    android:id="@+id/leftthumb"
                     android:layout_width="match_parent"
                     android:layout_height="150dp" />
                 <TextView
@@ -391,6 +400,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <ImageView
+                    android:id="@+id/rightthumb"
                     android:layout_width="match_parent"
                     android:layout_height="150dp" />
                 <TextView
