--- a/NIBBS/src/main/res/layout/activity_preview.xml
+++ b/NIBBS/src/main/res/layout/activity_preview.xml
@@ -453,18 +453,20 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/leftindex"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
+                                    android:gravity="center"
                                     android:text="Left Finger"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
@@ -473,22 +475,24 @@
                         </androidx.cardview.widget.CardView>
 
                         <View
-                            android:layout_width="20dp"
+                            android:layout_width="10dp"
                             android:layout_height="0dp" />
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/leftmiddle"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
+                                    android:gravity="center"
                                     android:text="Left Finger"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
@@ -512,42 +516,47 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/leftring"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
+                                    android:gravity="center"
                                     android:text="Left Finger"
+                                    android:textSize="15dp"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
                                     />
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
                         <View
-                            android:layout_width="20dp"
+                            android:layout_width="10dp"
                             android:layout_height="0dp" />
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/leftlittle"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
                                     android:text="Left Finger"
+                                    android:gravity="center"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
                                     />
@@ -581,18 +590,20 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/rightindex"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
+                                    android:gravity="center"
                                     android:text="Right Finger"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
@@ -600,22 +611,24 @@
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
                         <View
-                            android:layout_width="20dp"
+                            android:layout_width="10dp"
                             android:layout_height="0dp" />
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/rightmiddle"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
+                                    android:gravity="center"
                                     android:text="Right Finger"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
@@ -639,18 +652,20 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/rightring"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
+                                    android:gravity="center"
                                     android:text="Right Finger"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
@@ -658,22 +673,24 @@
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
                         <View
-                            android:layout_width="20dp"
+                            android:layout_width="10dp"
                             android:layout_height="0dp" />
 
                         <androidx.cardview.widget.CardView
-                            android:layout_width="70dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content">
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
                                 <ImageView
+                                    android:id="@+id/rightlittle"
                                     android:layout_width="match_parent"
                                     android:layout_height="70dp" />
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="15dp"
+                                    android:gravity="center"
                                     android:text="Right Finger"
                                     android:textColor="@color/white"
                                     android:background="@color/dackgreen"
@@ -709,6 +726,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/leftthumb"
                             android:layout_width="match_parent"
                             android:layout_height="150dp" />
                         <TextView
@@ -734,6 +752,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/rightthumb"
                             android:layout_width="match_parent"
                             android:layout_height="150dp" />
                         <TextView
@@ -769,7 +788,8 @@
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardView"
