--- a/NIBBS/src/main/res/layout/activity_beginface.xml
+++ b/NIBBS/src/main/res/layout/activity_beginface.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BeginfaceActivity">
+    tools:context=".face.BeginfaceActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
