--- a/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
+++ b/NIBBS/src/main/res/layout/activity_capturefingerprint.xml
@@ -10,6 +10,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp">
         <ImageView
+            android:id="@+id/backbutton"
             android:layout_width="37dp"
             android:layout_height="37dp"
             android:src="@drawable/closebutton"
