--- a/NIBBS/src/main/res/layout/activity_dataform.xml
+++ b/NIBBS/src/main/res/layout/activity_dataform.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".DataformActivity">
+    tools:context=".form.DataformActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
