--- a/NIBBS/src/main/res/layout/activity_signingpage.xml
+++ b/NIBBS/src/main/res/layout/activity_signingpage.xml
@@ -1,5 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#040C22">
@@ -39,15 +39,12 @@
 
 
         <com.github.gcacace.signaturepad.views.SignaturePad
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/signature_pad"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:background="@color/white"
             android:layout_marginVertical="150dp"
             android:layout_marginHorizontal="50dp"
-            app:penColor="@android:color/black"
             />
 
     <ImageView
