--- a/NIBBS/src/main/res/layout/activity_datacapture.xml
+++ b/NIBBS/src/main/res/layout/activity_datacapture.xml
@@ -51,9 +51,15 @@
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
         android:layout_gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/step">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -186,5 +192,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/maritalstatusInputLayout" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
