--- a/NIBBS/src/main/res/layout/activity_preview.xml
+++ b/NIBBS/src/main/res/layout/activity_preview.xml
@@ -42,9 +42,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="37dp"
         android:layout_gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -826,6 +832,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/signaturecontainer" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
 
 
     </ScrollView>
